# champagne-sales-ta-forecast

./: README.md  commit-msg.md  main.ipynb  main.py  pyproject.toml  report.qmd
src/: __init__.py  benchmark.py  data.py  dl.py  features.py  metrics.py  ml.py  statistical.py
