[project]
name = "champagne-sales-ta-forecast"
version = "0.1.0"
description = "Comparative forecasting benchmark: SARIMA, XGBoost, and PyTorch LSTM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"matplotlib>=3.8.0",
	"numpy>=1.26.0",
	"pandas>=2.2.0",
	"scikit-learn>=1.5.0",
	"statsmodels>=0.14.2",
	"torch>=2.2.0",
	"xgboost>=2.1.0",
]
